fix(wall): wallpaper overlay flickering

--- a/src/apps/seelen_wall/styles/global.css
+++ b/src/apps/seelen_wall/styles/global.css
@@ -14,23 +14,4 @@ body {
 .monitor {
   position: fixed;
   /* pos is added on runtime at styles */
-
-  .themed-wallpaper,
-  .wallpaper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-
-  .monitor-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 50;
-  }
 }
