--- a/static/themes/default/seelen/wallpaper-manager.css
+++ b/static/themes/default/seelen/wallpaper-manager.css
@@ -21,17 +21,35 @@
   }
 }
 
-.wallpaper-out {
+.wallpaper-container {
+  display: none;
   overflow: hidden;
   will-change: transform;
-  animation: ThanksNextPlease 500ms linear forwards;
+
+  &.rendering {
+    display: block;
+    animation: ExpandOutCircle 600ms cubic-bezier(0.8, 0, 1, 1) forwards;
+  }
+
+  &.will-unrender {
+    animation: Vanish 600ms linear forwards;
+  }
 }
 
-@keyframes ThanksNextPlease {
+@keyframes ExpandOutCircle {
   0% {
-    clip-path: circle(100%);
+    clip-path: circle(0%);
   }
   100% {
-    clip-path: circle(0%);
+    clip-path: circle(100%);
+  }
+}
+
+@keyframes Vanish {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
   }
 }
